@@ -1549,7 +1549,7 @@ cptr option_text[OPT_MAX] =
 	"birth_ironman",			/* OPT_birth_ironman */
 	"birth_no_stores",			/* OPT_birth_no_stores */
 	"birth_no_artifacts",		/* OPT_birth_no_artifacts */
-	NULL,						/* xxx */
+	"birth_evil_mode",						/* OPT_birth_evil_mode */
 	"birth_no_stacking",		/* OPT_birth_no_stacking */
 	NULL,						/* xxx */
 	NULL,						/* xxx */
@@ -1614,8 +1614,8 @@ cptr option_text[OPT_MAX] =
 	"adult_no_stores",			/* OPT_adult_no_stores */
 	"adult_no_artifacts",		/* OPT_adult_no_artifacts */
 	"adult_rand_artifacts",		/* OPT_adult_rand_artifacts */
-	NULL,						/* xxx */
-	NULL,						/* xxx */
+	"adult_evil_mode",						/* OPT_adult_evil_mode */
+	"adult_no_stacking",		/* OPT_adult_no_stacking */
 	NULL,						/* xxx */
 	NULL,						/* xxx */
 	NULL,						/* xxx */
@@ -1806,15 +1806,15 @@ cptr option_desc[OPT_MAX] =
 	NULL,										/* xxx */
 	NULL,										/* xxx */
 	NULL,										/* xxx */
-	"Birth: Allow purchase of stats using points",	/* OPT_birth_point_based */
-	"Birth: Allow specification of minimal stats",	/* OPT_birth_auto_roller */
-	"Birth: Maximize effect of race/class bonuses",	/* OPT_birth_maximize */
-	"Birth: Preserve artifacts when leaving level",	/* OPT_birth_preserve */
-	"Birth: Restrict the use of stairs/recall",	/* OPT_birth_ironman */
-	"Birth: Restrict the use of stores/home",	/* OPT_birth_no_stores */
-	"Birth: Restrict creation of artifacts",	/* OPT_birth_no_artifacts */
-	NULL,										/* xxx */
-	"Birth: Don't stack objects on the floor",	/* OPT_birth_no_stacking */
+	"Birth: Allow purchase of stats using points",  /* OPT_birth_point_based */
+	"Birth: Allow specification of minimal stats",  /* OPT_birth_auto_roller */
+	"Birth: Maximize effect of race/class bonuses", /* OPT_birth_maximize */
+	"Birth: Preserve artifacts when leaving level", /* OPT_birth_preserve */
+	"Birth: Restrict the use of stairs/recall",     /* OPT_birth_ironman */
+	"Birth: Restrict the use of stores/home",       /* OPT_birth_no_stores */
+	"Birth: Restrict creation of artifacts",        /* OPT_birth_no_artifacts */
+	"Birth: Evil mode",                             /* OPT_birth_evil_mode */
+	"Birth: Don't stack objects on the floor",      /* OPT_birth_no_stacking */
 	NULL,										/* xxx */
 	NULL,										/* xxx */
 	NULL,										/* xxx */
@@ -1877,8 +1877,8 @@ cptr option_desc[OPT_MAX] =
 	"Adult: Restrict the use of stairs/recall",	/* OPT_adult_ironman */
 	"Adult: Restrict the use of stores/home",	/* OPT_adult_no_stores */
 	"Adult: Restrict creation of artifacts",	/* OPT_adult_no_artifacts */
-	"Adult: Randomize some of the artifacts (beta)",	/* OPT_adult_rand_artifacts */
-	NULL,										/* xxx */
+	"Adult: Evil mode",								/* OPT_adult_evil_mode */
+	"Adult: Don't stack objects on the floor",	/* OPT_adult_no_stacking */
 	NULL,										/* xxx */
 	NULL,										/* xxx */
 	NULL,										/* xxx */
@@ -1978,12 +1978,12 @@ const bool option_norm[OPT_MAX] =
 	FALSE,		/* OPT_auto_scum */
 	FALSE,		/* xxx */
 	FALSE,		/* xxx */
-	TRUE,		/* OPT_expand_look */
-	TRUE,		/* OPT_expand_list */
-	TRUE,		/* OPT_view_perma_grids */
+	TRUE,			/* OPT_expand_look */
+	TRUE,			/* OPT_expand_list */
+	TRUE,			/* OPT_view_perma_grids */
 	FALSE,		/* OPT_view_torch_grids */
-	TRUE,		/* OPT_dungeon_align */
-	TRUE,		/* OPT_dungeon_stair */
+	TRUE,			/* OPT_dungeon_align */
+	TRUE,			/* OPT_dungeon_stair */
 	FALSE,		/* OPT_flow_by_sound */
 	FALSE,		/* OPT_flow_by_smell */
 	FALSE,		/* xxx track_follow */
@@ -1994,21 +1994,21 @@ const bool option_norm[OPT_MAX] =
 	FALSE,		/* OPT_hidden_player */
 	FALSE,		/* OPT_avoid_abort */
 	FALSE,		/* OPT_avoid_other */
-	TRUE,		/* OPT_flush_failure */
+	TRUE,			/* OPT_flush_failure */
 	FALSE,		/* OPT_flush_disturb */
 	FALSE,		/* xxx */
-	TRUE,		/* OPT_fresh_before */
+	TRUE,			/* OPT_fresh_before */
 	FALSE,		/* OPT_fresh_after */
 	FALSE,		/* xxx */
-	TRUE,		/* OPT_compress_savefile */
+	TRUE,			/* OPT_compress_savefile */
 	FALSE,		/* OPT_highlight_player */
 	FALSE,		/* OPT_view_yellow_light */
 	FALSE,		/* OPT_view_bright_light */
 	FALSE,		/* OPT_view_granite_light */
 	FALSE,		/* OPT_view_special_light */
-	TRUE,		/* OPT_easy_open */
-	TRUE,		/* OPT_easy_alter */
-	TRUE,		/* OPT_easy_floor */
+	TRUE,			/* OPT_easy_open */
+	TRUE,			/* OPT_easy_alter */
+	TRUE,			/* OPT_easy_floor */
 	FALSE,		/* OPT_show_piles */
 	FALSE,		/* OPT_center_player */
 	FALSE,		/* OPT_run_avoid_center */
@@ -2016,8 +2016,8 @@ const bool option_norm[OPT_MAX] =
 	FALSE,		/* OPT_auto_more */
 	FALSE,		/* OPT_smart_monsters */
 	FALSE,		/* OPT_smart_packs */
-	TRUE,		/* OPT_view_player_colour */
-	TRUE,		/* OPT_view_equippy_chars */
+	TRUE,			/* OPT_view_player_colour */
+	TRUE,			/* OPT_view_equippy_chars */
 	FALSE,		/* xxx */
 	FALSE,		/* xxx */
 	FALSE,		/* xxx */
@@ -2071,13 +2071,13 @@ const bool option_norm[OPT_MAX] =
 	FALSE,		/* xxx */
 	FALSE,		/* xxx */
 	FALSE,		/* OPT_birth_point_based */
-	TRUE,		/* OPT_birth_auto_roller */
-	TRUE,		/* OPT_birth_maximize */
-	TRUE,		/* OPT_birth_preserve */
+	TRUE,			/* OPT_birth_auto_roller */
+	TRUE,			/* OPT_birth_maximize */
+	TRUE,			/* OPT_birth_preserve */
 	FALSE,		/* OPT_birth_ironman */
 	FALSE,		/* OPT_birth_no_stores */
 	FALSE,		/* OPT_birth_no_artifacts */
-	FALSE,		/* xxx */
+	FALSE,		/* OPT_birth_evil_mode */
 	FALSE,		/* OPT_birth_no_stacking */
 	FALSE,		/* xxx */
 	FALSE,		/* xxx */
@@ -2134,13 +2134,14 @@ const bool option_norm[OPT_MAX] =
 	FALSE,		/* xxx */
 	FALSE,		/* xxx */
 	FALSE,		/* OPT_adult_point_based */
-	FALSE,		/* OPT_adult_auto_roller */
-	TRUE,		/* OPT_adult_maximize */
-	TRUE,		/* OPT_adult_preserve */
+	TRUE,			/* OPT_adult_auto_roller */
+	TRUE,			/* OPT_adult_maximize */
+	TRUE,			/* OPT_adult_preserve */
 	FALSE,		/* OPT_adult_ironman */
 	FALSE,		/* OPT_adult_no_stores */
 	FALSE,		/* OPT_adult_no_artifacts */
-	FALSE,		/* OPT_adult_rand_artifacts */
+	FALSE,		/* OPT_adult_evil_mode */
+	FALSE,		/* OPT_adult_no_stacking */
 	FALSE,		/* xxx */
 	FALSE,		/* xxx */
 	FALSE,		/* xxx */
@@ -2340,10 +2341,10 @@ const byte option_page[OPT_PAGE_MAX][OPT_PAGE_PER] =
 		OPT_birth_maximize,
 		OPT_birth_preserve,
 		OPT_birth_ironman,
+		OPT_birth_evil_mode,
 		OPT_birth_no_stores,
 		OPT_birth_no_artifacts,
 		OPT_birth_no_stacking,
-		255,
 		255,
 		255,
 		255,
